exports[`test No options 1`] = `
"<span></span>
"
`;

exports[`test Option: class 1`] = `
"<span></span>
"
`;

exports[`test Option: className 1`] = `
"<span></span>
"
`;

exports[`test Option: id 1`] = `
"<span></span>
"
`;

exports[`test Permanent (no shadow, with border) 1`] = `
"<div>
  <div class=\"pe-toolbar pe-dark-tone tests-drawer-themed-toolbar\">
    <div class=\"pe-toolbar__title\">
      Title
    </div>
    <div class=\"pe-shadow pe-shadow--animated\">
      <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
      <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
    </div>
  </div>
  <div style=\"position: relative; overflow: hidden;\">
    <div style=
    \"display: flex; height: 350px; background: rgb(255, 255, 255); color: rgb(51, 51, 51);\">
    <div style=\"padding: 0px;\">
        <div class=
        \"pe-dialog pe-drawer pe-drawer--permanent pe-drawer--border\">
        <div class=\"pe-dialog__touch\"></div>
          <div class=\"pe-dialog__content\">
            <div class=\"pe-shadow pe-shadow--animated\">
              <div class=\"pe-shadow__bottom pe-shadow--z-0\"></div>
              <div class=\"pe-shadow__top pe-shadow--z-0\"></div>
            </div>
            <form class=
            \"pe-dialog-pane pe-dialog-pane--body-full-bleed\">
              <div class=\"pe-dialog-pane__content\">
                <div class=\"pe-dialog-pane__body\">
                  <div class=
                  \"pe-list pe-list--compact pe-list--padding\">
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Inbox
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Starred
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M2.01 21L23 12 2.01 3 2 10l15 2-15 2z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Sent mail
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M21.99 8c0-.72-.37-1.35-.94-1.7L12 1 2.95 6.3C2.38 6.65 2 7.28 2 8v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2l-.01-10zM12 13L3.74 7.84 12 3l8.26 4.84L12 13z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Drafts
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div style=\"overflow: hidden; width: 100%;\">
        <div style=\"padding: 20px;\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Permanent, floating (with shadow) 1`] = `
"<div>
  <div class=\"pe-toolbar pe-dark-tone tests-drawer-themed-toolbar\">
    <div class=\"pe-toolbar__title\">
      Title
    </div>
    <div class=\"pe-shadow pe-shadow--animated\">
      <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
      <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
    </div>
  </div>
  <div style=\"position: relative; overflow: hidden;\">
    <div style=
    \"display: flex; height: 350px; background: rgb(255, 255, 255); color: rgb(51, 51, 51);\">
    <div style=\"padding: 20px;\">
        <div class=
        \"pe-dialog pe-drawer pe-drawer--permanent pe-drawer--floating\">
        <div class=\"pe-dialog__touch\"></div>
          <div class=\"pe-dialog__content\">
            <div class=\"pe-shadow pe-shadow--animated\">
              <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
              <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
            </div>
            <form class=
            \"pe-dialog-pane pe-dialog-pane--body-full-bleed\">
              <div class=\"pe-dialog-pane__content\">
                <div class=\"pe-dialog-pane__body\">
                  <div class=
                  \"pe-list pe-list--compact pe-list--padding\">
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Inbox
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Starred
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M2.01 21L23 12 2.01 3 2 10l15 2-15 2z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Sent mail
                          </div>
                        </div>
                      </div>
                    </div>
                    <div class=
                    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-drawer-navigation-list\"
                    tabindex=\"0\">
                      <div class=\"pe-list-tile__primary\" style=\"\">
                        <div class=
                        \"pe-list-tile__content pe-list-tile__content-front\">
                        <div class=\"pe-icon pe-icon--regular\">
                            <div class=\"pe-svg\">
                              <svg xmlns=
                              \"http://www.w3.org/2000/svg\" width=
                              \"24\" height=\"24\" viewbox=\"0 0 24 24\"
                              focusable=\"false\">
                                <path d=
                                \"M21.99 8c0-.72-.37-1.35-.94-1.7L12 1 2.95 6.3C2.38 6.65 2 7.28 2 8v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2l-.01-10zM12 13L3.74 7.84 12 3l8.26 4.84L12 13z\">
                                </path>
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div class=\"pe-list-tile__content\">
                          <div class=\"pe-list-tile__title\">
                            Drafts
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div style=\"overflow: hidden; width: 100%;\">
        <div style=\"padding: 20px;\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
